tests/baselines/reference/undefinedTypeAssignment3.errors.txt
tests/cases/compiler/undefinedTypeAssignment3.ts(1,5): error TS2397: Declaration name conflicts with built-in global identifier 'undefined'.


==== tests/cases/compiler/undefinedTypeAssignment3.ts (1 errors) ====
    var undefined = null;
        ~~~~~~~~~
!!! error TS2397: Declaration name conflicts with built-in global identifier 'undefined'.
    